<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jrivard</groupId>
        <artifactId>jcxfs-parent</artifactId>
        <version>0.0.2-SNAPSHOT</version>
    </parent>

    <artifactId>xodusfs</artifactId>

    <packaging>jar</packaging>

    <url>https://github.com/jrivard/jcxfs</url>
    <name>XodusFs - Xodus DB based file system implementation</name>

    <licenses>
        <license>
            <name>Apache License Version 2.0, January 2004</name>
            <url>http://www.apache.org/licenses/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <maven.compiler.release>22</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>

        <!-- git.commit.time is populated via git-commit-id-plugin and results in a (hopefully) reproducible maven build -->
        <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>

        <skipSpotbugs>false</skipSpotbugs>
    </properties>


    <profiles>
        <profile>
            <id>skip-tests</id>
            <properties>
                <skipTests>true</skipTests>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!--
        <dependency>
            <groupId>org.jrivard</groupId>
            <artifactId>xodus-jpms</artifactId>
            <version>0.0.2-SNAPSHOT</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.jetbrains.xodus</groupId>
            <artifactId>xodus-utils</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.xodus</groupId>
            <artifactId>xodus-openAPI</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.xodus</groupId>
            <artifactId>xodus-environment</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.xodus</groupId>
            <artifactId>xodus-crypto</artifactId>
            <version>2.0.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.bouncycastle</groupId>
                    <artifactId>bcpg-jdk15on</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>1.78.1</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.1.0-alpha1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>



        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-mods</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultEntries>true</addDefaultEntries>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Archive-Type>jar</Archive-Type>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                            <Implementation-URL>${project.url}</Implementation-URL>
                            <Implementation-Build-Java-Version>${maven.compiler.target}</Implementation-Build-Java-Version>
                            <SCM-Git-Branch>${git.branch}</SCM-Git-Branch>
                            <SCM-Git-Commit-ID>${git.commit.id}</SCM-Git-Commit-ID>
                            <SCM-Git-Commit-ID-Abbrev>${git.commit.id.abbrev}</SCM-Git-Commit-ID-Abbrev>
                            <SCM-Git-Commit-ID-Description>${git.commit.id.describe}</SCM-Git-Commit-ID-Description>
                            <SCM-Git-Commit-Timestamp>${git.commit.time}</SCM-Git-Commit-Timestamp>
                            <SCM-Git-Commit-Dirty>${git.dirty}</SCM-Git-Commit-Dirty>
                            <SCM-Git-Remote-Origin-URL>${git.remote.origin.url}</SCM-Git-Remote-Origin-URL>
                            <manifest-id>jcxfs-jar</manifest-id>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
